--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/cdk": "8.0.1",
     "tslib": "^1.10.0",
     "ajv": "6.10.0",
+    "amqp-stats": "0.0.14",
     "arrive": "2.4.1",
     "body-parser": "^1.19.0",
     "amqplib": "^0.5.5",
@@ -42,7 +43,8 @@
     "rxjs": "~6.4.0",
     "rxjs-compat": "6.5.2",
     "web-animations-js": "2.3.1",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.5",
