--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "arrive": "2.4.1",
     "body-parser": "^1.19.0",
     "amqplib": "^0.5.5",
+    "angular-notifier": "^6.0.1",
+    "ngx-socket-io": "^3.0.1",
+    "socket.io": "^1.7.3",
     "bootstrap": "4.3.1",
     "bootstrap-material-design": "4.1.2",
     "bootstrap-notify": "3.1.3",
