--- a/package.json
+++ b/package.json
@@ -13,24 +13,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.7",
+    "@angular/cdk": "8.0.1",
     "@angular/common": "~8.2.7",
     "@angular/compiler": "~8.2.7",
     "@angular/core": "~8.2.7",
     "@angular/forms": "~8.2.7",
+    "@angular/material": "8.0.1",
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
-    "@angular/material": "8.0.1",
-    "@angular/cdk": "8.0.1",
-    "tslib": "^1.10.0",
     "ajv": "6.10.0",
     "amqp-stats": "0.0.14",
-    "arrive": "2.4.1",
-    "body-parser": "^1.19.0",
     "amqplib": "^0.5.5",
     "angular-notifier": "^6.0.1",
-    "ngx-socket-io": "^3.0.1",
-    "socket.io": "^1.7.3",
+    "arrive": "2.4.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "4.3.1",
     "bootstrap-material-design": "4.1.2",
     "bootstrap-notify": "3.1.3",
@@ -41,13 +38,17 @@
     "hammerjs": "2.0.8",
     "jquery": "3.4.1",
     "moment": "2.24.0",
+    "ngx-socket-io": "^3.0.1",
+    "node-docker-api": "^1.1.22",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.15.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "6.5.2",
+    "socket.io": "^1.7.3",
+    "tslib": "^1.10.0",
+    "uuid": "^3.3.3",
     "web-animations-js": "2.3.1",
-    "zone.js": "~0.9.1",
-    "uuid": "^3.3.3"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.5",
