--- a/package.json
+++ b/package.json
@@ -12,63 +12,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.7",
-    "@angular/cdk": "8.0.1",
-    "@angular/common": "~8.2.7",
-    "@angular/compiler": "~8.2.7",
-    "@angular/core": "~8.2.7",
-    "@angular/forms": "~8.2.7",
-    "@angular/material": "8.0.1",
-    "@angular/platform-browser": "~8.2.7",
-    "@angular/platform-browser-dynamic": "~8.2.7",
-    "@angular/router": "~8.2.7",
+    "@angular/animations": "~9.0.6",
+    "@angular/cdk": "9.1.2",
+    "@angular/common": "~9.0.6",
+    "@angular/compiler": "~9.0.6",
+    "@angular/core": "~9.0.6",
+    "@angular/forms": "~9.0.6",
+    "@angular/material": "9.1.2",
+    "@angular/platform-browser": "~9.0.6",
+    "@angular/platform-browser-dynamic": "~9.0.6",
+    "@angular/router": "~9.0.6",
     "ajv": "6.12.0",
     "amqp-stats": "0.0.14",
     "amqplib": "^0.5.5",
     "angular-notifier": "^6.0.1",
     "arrive": "2.4.1",
     "body-parser": "^1.19.0",
-    "bootstrap": "4.3.1",
+    "bootstrap": "4.4.1",
     "bootstrap-material-design": "4.1.2",
     "bootstrap-notify": "3.1.3",
-    "chartist": "0.11.2",
+    "chartist": "0.11.4",
     "classlist.js": "1.1.20150312",
     "core-js": "3.6.4",
     "express": "4.17.1",
-    "hammerjs": "2.0.8",
     "jquery": "3.4.1",
     "moment": "2.24.0",
     "ngx-socket-io": "^3.0.1",
     "node-docker-api": "^1.1.22",
-    "perfect-scrollbar": "1.1.0",
-    "popper.js": "1.15.0",
+    "perfect-scrollbar": "1.5.0",
+    "popper.js": "1.16.1",
     "rxjs": "~6.5.4",
-    "rxjs-compat": "6.5.2",
+    "rxjs-compat": "6.5.4",
     "socket.io": "^2.3.0",
-    "tslib": "^1.10.0",
-    "uuid": "^3.3.3",
-    "web-animations-js": "2.3.1",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.11.1",
+    "uuid": "^7.0.2",
+    "web-animations-js": "2.3.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.5",
+    "@angular-devkit/build-angular": "~0.900.6",
     "@angular/cli": "~9.0.6",
-    "@angular/compiler-cli": "~8.2.7",
-    "@angular/language-service": "~8.2.7",
-    "@types/node": "~13.9.1",
+    "@angular/compiler-cli": "~9.0.6",
+    "@angular/language-service": "~9.0.6",
     "@types/jasmine": "~3.5.9",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~13.9.1",
+    "codelyzer": "^5.2.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.1",
+    "karma-jasmine": "~3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.2",
     "protractor": "~5.4.3",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.20.1",
-    "typescript": "~3.5.3"
+    "ts-node": "~8.6.2",
+    "tslint": "~6.1.0",
+    "typescript": "3.7.5"
   }
 }
