--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@angular/animations": "~9.0.6",
     "@angular/cdk": "9.1.2",
-    "@angular/common": "~9.0.6",
+    "@angular/common": "^9.0.6",
     "@angular/compiler": "~9.0.6",
     "@angular/core": "~9.0.6",
     "@angular/forms": "~9.0.6",
@@ -34,13 +34,18 @@
     "chartist": "0.11.4",
     "classlist.js": "1.1.20150312",
     "core-js": "3.6.4",
+    "cryptiles": "^4.1.3",
     "express": "4.17.1",
+    "hawk": "^7.0.10",
+    "hoek": "^6.1.3",
     "jquery": "3.4.1",
+    "minimist": "^1.2.5",
     "moment": "2.24.0",
     "ngx-socket-io": "^3.0.1",
     "node-docker-api": "^1.1.22",
     "perfect-scrollbar": "1.5.0",
     "popper.js": "1.16.1",
+    "qs": "^6.9.1",
     "rxjs": "~6.5.4",
     "rxjs-compat": "6.5.4",
     "socket.io": "^2.3.0",
