updated github actions for docker deploys

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,10 +1,7 @@
-name: Docker 
+name: Docker - Deploy Latest 
 
 on:
   push:
-    branches:
-      - master
-  pull_request:
     branches:
       - master
 
