--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,7 +3,7 @@ name: Docker - Deploy Latest
 on:
   push:
     branches:
-      - master
+      - main 
 
 jobs:
   build:
@@ -16,5 +16,5 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: devnw/atomizer-test-ui
+          repository: atomizer/test-ui
           tags: latest
