--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -18,6 +18,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: devnw/atomizer-test-ui
+          repository: atomizer/test-ui
           tag_with_ref: true
           push: ${{ startsWith(github.ref, 'refs/tags/') }}
