--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,21 +26,21 @@ services:
                         - 8080:15672
                         - 5672:5672
         atomizer-node1:
-                image: 'devnw/atomizer-test:latest'
+                image: 'atomizer/test-agent:latest'
                 depends_on:
                         - "rabbit-mq"
                 environment:
                         - CONNECTIONSTRING=amqp://guest:guest@atomrabbit:5672/
                         - QUEUE=atomizer
         atomizer-node2:
-                image: 'devnw/atomizer-test:latest'
+                image: 'atomizer/test-agent:latest'
                 depends_on:
                         - "rabbit-mq"
                 environment:
                         - CONNECTIONSTRING=amqp://guest:guest@atomrabbit:5672/
                         - QUEUE=atomizer
         atomizer-node3:
-                image: 'devnw/atomizer-test:latest'
+                image: 'atomizer/test-agent:latest'
                 depends_on:
                         - "rabbit-mq"
                 environment:
